# django-oauth-login

./: .gitignore  README.md  pyproject.toml
.github/workflows/: test.yml
oauth_login/: apps.py  models.py  providers.py  urls.py  views.py
oauth_login/migrations/: 0001_initial.py
oauth_login/templates/oauth_login/: error.html
oauthlogin/: admin.py  apps.py  exceptions.py  models.py  providers.py  urls.py  views.py
oauthlogin/migrations/: 0001_initial.py  0002_alter_oauthconnection_options_and_more.py  0003_alter_oauthconnection_access_token_and_more.py
provider_examples/: bitbucket.py  github.py  gitlab.py
scripts/: format  makemigrations  mypy  pre-commit  runserver  shell  test
tests/: providers  settings.py  test_backends.py  test_checks.py  test_models.py  test_providers.py  urls.py
tests/provider_tests/: test_github.py
tests/templates/: base.html  index.html  login.html
tests/users/: models.py
tests/users/migrations/: 0001_initial.py
